--- a/male.html
+++ b/male.html
@@ -150,8 +150,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-1">
-                    <div class="header__logo text-center">
-                        <a href="./index.html"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
+                    <div class="header__logo text-center" style="height: 100px;">
+                        <a href="./index.html" style="height: 100%;"><img src="img/logo/logonew-06.png" alt="" style="object-fit: cover; height: 100%;"></a>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-5">
@@ -160,7 +160,7 @@
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
                             <li><a href="./female.html">Nữ</a></li>
                             <li class="active"><a href="#">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
                         </ul>
                     </nav>
@@ -199,7 +199,7 @@
     <!-- Hero Section Begin -->
     <section>
         <div class="d-block">
-            <img src="img/banner/banner-nam.png"/>
+            <img src="./img/banner/banner-nam.png"/>
         </div>
     </section>
     <!-- Hero Section End -->
@@ -343,16 +343,21 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <div class="footer__about">
-                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
-                        <ul>
-                            <li>Số 96 Định Công, Quận Hoàng Mai, TP.Hà Nội</li>
-                            <li>1800.8001</li>
-                            <li>thoitrangscarlet@gmail.com</li>
-                        </ul>
+                <div class="col-lg-3 col-md-6 col-sm-12 d-flex" style="align-content: space-between; flex-wrap: wrap;">
+                        <div class="footer__about">
+                            <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
+                            <ul>
+                                <li>Số 20 đường Mới, huyện Đông Anh, TP.Hà Nội</li>
+                                <li>1800.8001</li>
+                                <li>thoitrangscarlet@gmail.com</li>
+                            </ul>
+                        </div>
+                        <div class="d-block w-100 text-right hide-in-responsive">
+                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-facebook" aria-hidden="true"></i>
+                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-youtube" aria-hidden="true"></i>
+                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-instagram" aria-hidden="true"></i>
+                        </div>
                     </div>
-                </div>
             </div>
             <hr>
             <div class="row">
@@ -364,7 +369,7 @@
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
-                <div class="footer-bottom col-4 col-sm-12 text-right">
+                <div class="footer-bottom col-md-4 col-sm-12 text-right">
                     <img style="width: 100px;" src="./img/footerImg.png" />
                 </div>
             </div>
@@ -452,7 +457,7 @@
                 prePrice: '799.000',
                 title: 'Áo thun nam dáng ôm',
                 discount: 50,
-                imgUrl: 'img/nam/9.png'
+                imgUrl: 'img/tintuc/2.jpg'
             },
             {
                 price: '149.500 đ',
