--- a/product-details.html
+++ b/product-details.html
@@ -35,8 +35,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-1">
-                    <div class="header__logo text-center">
-                        <a href="./index.html"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
+                    <div class="header__logo text-center" style="height: 100px;">
+                        <a href="./index.html" style="height: 100%;"><img src="img/logo/logonew-06.png" alt="" style="object-fit: cover; height: 100%;"></a>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-5">
@@ -111,7 +111,7 @@
         </div>
         <div class="product__details__pic prdDetailImg" style="background-color: unset;">
             <div class="container">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleIndicators" class="carousel slide show-in-responsive" data-ride="carousel">
                     <ol class="carousel-indicators">
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -141,7 +141,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="row hide-in-responsive">
+                <div class="row hide-in-responsive d-flex">
                     <div class="col-lg-6 col-md-9">
                         <div class="tab-content h-100">
                             <div class="tab-pane active h-100" id="tabs-4" role="tabpanel">
@@ -296,7 +296,7 @@
                                         </button>
                                     </div>
                                     <div class="col-lg-12 col-md-12 mt-2">
-                                        <a href="/checkout.html" class="btn btn-black btn-block">Mua ngay</a>
+                                        <a href="./checkout.html" class="btn btn-black btn-block">Mua ngay</a>
                                     </div>
                                 </div>
                             </div>
@@ -721,16 +721,21 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <div class="footer__about">
-                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
-                        <ul>
-                            <li>Số 96 Định Công, Quận Hoàng Mai, TP.Hà Nội</li>
-                            <li>1800.8001</li>
-                            <li>thoitrangscarlet@gmail.com</li>
-                        </ul>
+                <div class="col-lg-3 col-md-6 col-sm-12 d-flex" style="align-content: space-between; flex-wrap: wrap;">
+                        <div class="footer__about">
+                            <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
+                            <ul>
+                                <li>Số 20 đường Mới, huyện Đông Anh, TP.Hà Nội</li>
+                                <li>1800.8001</li>
+                                <li>thoitrangscarlet@gmail.com</li>
+                            </ul>
+                        </div>
+                        <div class="d-block w-100 text-right hide-in-responsive">
+                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-facebook" aria-hidden="true"></i>
+                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-youtube" aria-hidden="true"></i>
+                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-instagram" aria-hidden="true"></i>
+                        </div>
                     </div>
-                </div>
             </div>
             <hr>
             <div class="row">
@@ -742,7 +747,7 @@
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
-                <div class="footer-bottom col-4 col-sm-12 text-right">
+                <div class="footer-bottom col-md-4 col-sm-12 text-right">
                     <img style="width: 100px;" src="./img/footerImg.png" />
                 </div>
             </div>
